# maraudr

./: .gitignore  README.md  compose.prod.yaml  compose.yaml  env
.github/workflows/: build.yaml
src/: Maraudr.sln  compose.yaml
src/DocumentTests/: DocumentTests.cs  DocumentTests.csproj
src/Maraudr.Associations.Endpoints/: Maraudr.Associations.Endpoints.csproj  Program.cs
src/Maraudr.Associations.Endpoints/Properties/: launchSettings.json
src/Modules/Maraudr.Assocation/Maraudr.Associations.Application/: DependencyInjection.cs  Maraudr.Associations.Application.csproj
src/Modules/Maraudr.Assocation/Maraudr.Associations.Domain/: Factory.cs  Maraudr.Associations.Domain.csproj
src/Modules/Maraudr.Assocation/Maraudr.Associations.Endpoints/: Maraudr.Associations.Endpoints.http  Program.cs
src/Modules/Maraudr.Assocation/Maraudr.Associations.Infrastructure/: AssociationsContext.cs  DependencyInjection.cs
src/Modules/Maraudr.Association/: Dockerfile
src/Modules/Maraudr.Association/Maraudr.Associations.Endpoints/: GlobalUsing.cs  (+5 more)
src/Modules/Maraudr.Document/: Dockerfile
src/Modules/Maraudr.EmailSender/: Dockerfile
src/Modules/Maraudr.Geo/: Dockerfile  compose.yaml
src/Modules/Maraudr.MCP/: Dockerfile
src/Modules/Maraudr.MCP/McpServer/mcp-maraudr/: main.py  mcp_maraudr_server.py  ollama_client.ipynb  ollama_client.py  pyproject.toml
src/Modules/Maraudr.MCP/McpServer/mcp-maraudr/tools/: stock_tools.py
src/Modules/Maraudr.Planning/: Dockerfile
src/Modules/Maraudr.Stock/: Dockerfile  compose.yaml
src/Modules/Maraudr.User/: Dockerfile  compose.yaml
(+606 files in other folders)
